--- a/UnoPlatformSandbox/UnoPlatformSandbox.Shared/Themes/Generic.xaml
+++ b/UnoPlatformSandbox/UnoPlatformSandbox.Shared/Themes/Generic.xaml
@@ -2,11 +2,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:views="using:UnoPlatformSandbox.Shared.Controls"
-    xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Converters"
-    xmlns:helpers="using:UnoPlatformSandbox.Shared.Helpers">
+    xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Converters">
 
     <toolkit:BoolToVisibilityConverter x:Key="CNVBoolToVisibility" />
-    <helpers:InvertedBoolToVisibilityConverter x:Key="CNVInvertedBoolToVisibility" />
 
     <Style TargetType="views:BusyIndicator">
         <Setter Property="Template">
