--- a/UnoPlatformSandbox/UnoPlatformSandbox.Shared/Themes/Generic.xaml
+++ b/UnoPlatformSandbox/UnoPlatformSandbox.Shared/Themes/Generic.xaml
@@ -6,32 +6,6 @@
 
     <toolkit:BoolToVisibilityConverter x:Key="CNVBoolToVisibility" />
 
-    <!--<Style TargetType="views:BusyIndicator">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate x:Key="BusyIndicatorTemplate">
-                    <Grid x:Name="root">
-
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*"></RowDefinition>
-                            <RowDefinition Height="*"></RowDefinition>
-                        </Grid.RowDefinitions>
-
-                        <ContentPresenter x:Name="Presenter" Grid.Row="0" />
-                        <TextBlock Grid.Row="1">
-                            Hi there from Busyindicator!
-                        </TextBlock>
-
-                    </Grid>
-
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>-->
-
     <Style TargetType="views:BusyIndicator">
         <Setter Property="Template">
             <Setter.Value>
@@ -47,10 +21,22 @@
                         </Grid.RowDefinitions>
 
                         <ContentPresenter Grid.Row="0" Content="{TemplateBinding Content}"/>
-                        <TextBlock Grid.Row="1" Visibility="{Binding IsBusy, Converter={StaticResource CNVBoolToVisibility}}">
-                            Hi there from Busyindicator!
-                        </TextBlock>
+                        <Grid Grid.Row="1" Visibility="{Binding IsBusy, Converter={StaticResource CNVBoolToVisibility}}">
+                            <Grid Opacity="0.5" Background="White"/>
 
+                            <Border HorizontalAlignment="Center" VerticalAlignment="Center" BorderThickness="0">
+                                <Grid Margin="4 4 4 0" x:Name="visual" RenderTransformOrigin="0.5,0.5">
+                                    <!--<Grid.RenderTransform>
+                                        <RotateTransform x:Name="angleTransform"/>
+                                    </Grid.RenderTransform>-->
+
+                                    <Path Data="M0,0 L9,6 9,6 0,12 z" Canvas.ZIndex="2"
+                                          Fill="Blue" HorizontalAlignment="Center" Height="14" Margin="10,-4,0,0" Stretch="Fill" VerticalAlignment="Top" Width="10"/>
+                                    <Path Data="M22,0 L22.416,0 22.416,5 22,5 C12.56,5 5,13 5,22.5 5,32 12.80,40 22.5,40 32,40 39.5,32.6 40,23.40 L40,23 40,23 C40,22.8 40,22.6 40,22.5 40,21.12 41,20 42.4,20 43.71,20 44.8,21 45,22.24 L45,22.5 45,22.5 C45,35 35,45 22.5,45 10,45 0,35 0,22.5 0,10.2 9.7,0.3 22,0 z" 
+                                          Fill="Red" HorizontalAlignment="Center" Height="45" Margin="0" Stretch="Fill" VerticalAlignment="Center" Width="45"/>
+                                </Grid>
+                            </Border>
+                        </Grid>
                     </Grid>
 
                 </ControlTemplate>
