--- a/UnoPlatformSandbox/UnoPlatformSandbox.Shared/Themes/Generic.xaml
+++ b/UnoPlatformSandbox/UnoPlatformSandbox.Shared/Themes/Generic.xaml
@@ -19,7 +19,7 @@
                             <RowDefinition Height="*"></RowDefinition>
                         </Grid.RowDefinitions>
 
-                        <ContentPresenter Grid.Row="0" Content="{TemplateBinding Content}"/>
+                        <ContentPresenter Grid.Row="0" />
                         <Grid Grid.Row="0" Visibility="{Binding IsBusy, Converter={StaticResource CNVBoolToVisibility}}">
                             <Grid Opacity="0.5" Background="White"/>
 
